--- a/gabia/assets/css/style2-study.css
+++ b/gabia/assets/css/style2-study.css
@@ -1,4 +1,4 @@
-/* layout */
+/* Main page layout */
 #wrap {}
 #header {height: 89px; border-bottom: 1px solid #efefef;}
 #banner {height: 550px; background: url(../img/banner-bg3.jpg) no-repeat center top; }
@@ -10,6 +10,17 @@
 #blog {}
 #site {background-color: #f8f9fa;}
 #footer { }
+
+
+/* sub page layout */
+#sub-banner {background: url(../img/server-bg1.png) repeat-x center top; }
+#sub-banner.mail-bg {background: url(../img/mail-bg1.png) repeat-x center top; }
+#sub-banner.service-bg {background: url(../img/service-bg1.png) repeat-x center top; }
+#sub-banner.hosting-bg {background: url(../img/hosting-bg1.png) repeat-x center top; }
+#product-table {  }
+#select2 {background: #1d7abd;}
+#select5 {background: #1d7abd;}
+#infor2 { }
 
 /* container */
 .container {width: 1180px; height: inherit; /*background-color:rgba(0,0,0,0.5); */margin:0 auto; }
@@ -98,6 +109,27 @@ position: absolute; right: 0; top: 1px; }
 .infor .infor-box .in-right {float: left; width: 50%; padding-left: 50px; box-sizing: border-box;}
 .infor .infor-box .in-right li {font-size: 16px; color: #666;}
 
+/* infor2 */
+.infor2 {padding: 70px 0; text-align: center;}
+.infor2 h3 {font-size: 40px; padding-bottom: 20px; font-weight: 300;   }
+.infor2 .infor-btn {font-size: 16px; display: inline-block;  border: 1px solid #333; background-color: #fff; padding: 12px 42px; transition: all 0.3s ease; margin-bottom: 50px;}
+.infor2 .infor-btn:hover {background-color: #000; color: #fff;}
+.infor2 .infor-box {overflow: hidden; text-align: left; padding: 0 150px; }
+.infor2 .infor-box .in-left {overflow: hidden; width: 50%; float: left; }
+.infor2 .infor-box .in-left h4 {float: left; width: 110px; height: 80px;background-color: #1d7abd; color:#fff; font-size: 16px; border-radius:  50%; /*box-sizing: border-box;*/  text-align: center; padding-top: 30px;}
+.infor2 .infor-box .in-left ul {float: left; padding: 15px 0 0 20px;}
+.infor2 .infor-box .in-left ul li {padding-top: 10px;}
+.infor2 .infor-box .in-left em {font-size: 16px; color: #333; width: 170px; display: inline-block;}
+.infor2 .infor-box .in-left strong {font-size: 16px; color: #1d7abd;}
+.infor2 .infor-box .in-right {overflow: hidden; width: 50%; float: left; }
+.infor2 .infor-box .in-right h4 {float: left; width: 110px; height: 90px;background-color: #1d7abd; color:#fff; font-size: 16px; border-radius:  50%;  /*box-sizing: border-box;*/  text-align: center; padding-top: 20px;}
+.infor2 .infor-box .in-right ul {float: left; padding: 15px 0 0 20px;}
+.infor2 .infor-box .in-right ul li {padding-top: 10px;}
+.infor2 .infor-box .in-right em {font-size: 16px; color: #333; width: 100px; display: inline-block;}
+.infor2 .infor-box .in-right strong {font-size: 16px; color: #1d7abd;}
+
+
+
 /* ad */
 .ad {padding: 70px 0; text-align: center; z-index: 10; position: relative;}
 .ad h3 {font-size: 40px; padding-bottom: 20px; color: #fff;}
@@ -170,14 +202,7 @@ position: absolute; right: 0; top: 1px; }
 
 
 
-/* sub page layout */
-#sub-banner {background: url(../img/server-bg1.png) repeat-x center top; }
-#sub-banner.mail-bg {background: url(../img/mail-bg1.png) repeat-x center top; }
-#sub-banner.service-bg {background: url(../img/service-bg1.png) repeat-x center top; }
-#sub-banner.hosting-bg {background: url(../img/hosting-bg1.png) repeat-x center top; }
-#product-table {  }
-#select2 {background: #1d7abd;}
-#select5 {background: #1d7abd;}
+
 
 
 /* sub-banner */
